--- a/SneakerAPI/appsettings.json
+++ b/SneakerAPI/appsettings.json
@@ -8,8 +8,8 @@
   },
 
   "ConnectionStrings": {
-    //"DevConnection": "Server=THIENNBM;Database=SneakerDB;Trusted_Connection=True;MultipleActiveResultSets=True;user id=sa;password=123456;"
-    "DevConnection": "Server=W010900145875;Database=SneakerDB;Trusted_Connection=True;MultipleActiveResultSets=True;user id=sa;password=123456;"
+    "DevConnection": "Server=THIENNBM;Database=SneakerDB;Trusted_Connection=True;MultipleActiveResultSets=True;user id=sa;password=123456;"
+    //"DevConnection": "Server=W010900145875;Database=SneakerDB;Trusted_Connection=True;MultipleActiveResultSets=True;user id=sa;password=123456;"
   },
 
   "AllowedHosts": "*"
