Thiennbm - gửi mail

--- a/SneakerOutside2/appsettings.json
+++ b/SneakerOutside2/appsettings.json
@@ -6,6 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailSettings": {
+    "Name": "Sneaker project",
+    "EmailId": "thiensneakerproject@gmail.com",
+    "Password": "Skyng01211",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "AllowedHosts": "*",
   "SneakerAPIUrl": "https://localhost:44340"
 }
